--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <style>
     .none{list-style: none;}
+    nav a{text-decoration: none ;}
   </style>
 </head>
 <body>
