--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             The dashboard also includes a table that shows the top 10 products by sales.
             
             The dashboard is well-organized and easy to read. The visualizations are clear and concise. The dashboard is a valuable tool for the retail store to track its sales performance and identify trends.</p>
-        <img src="./image/Screenshot 2023-08-10 095421.png" width="1200" height="500" alt="Project image">
+        <img src="./image/Screenshot 2023-08-10 095421.png" width="500" height="250" alt="Project image">
       </li>
       <li>
         <h4>Past Three Years Bike Analysis For the Three Top States For Australia</h4>
@@ -103,7 +103,16 @@
         <p><b>Conclusion:</b>
 
             This Power BI dashboard is a valuable tool for anyone who wants to gain insights into the Australian bike market. By tracking bike purchase trends and identifying patterns, you can make informed decisions about the market and better serve your customers.</p>
-        <img src="./image/past_three_years_Bike_analysis.png" width="1200" height="500" alt="Project image">
+        <img src="./image/past_three_years_Bike_analysis.png" width="500" height="250" alt="Project image">
+      </li>
+      <li>
+        <h4>Pizza Sales Analysis & Report</h4>
+        <p>I'm excited to share that I've designed a dashboard in Excel to track pizza sales! I cleaned the data, processed it, and visualized it to create a clear and concise overview of our sales performance.
+
+          The dashboard includes charts and graphs that show trends in sales over time, by type of pizza. It also includes insights into our most popular pizzas and the days of the week when we sell the most.
+          
+          I learned a lot from this project, including how to clean and process data in Excel, how to create effective visualizations, and how to work collaboratively with others. I'm grateful for the opportunity to have worked on this project, and I'm excited to apply what I learned to future projects.</p>
+        <img src="./image/pizza sales.png" width="500" height="250" alt="Project image">
       </li>
     </ul>
   </section>
