--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <li>Address: Karak, 27200 Pakistan</li>
       <li>Cell: +92 316-9619-371</li>
       <li>Email: haseebkhan2712002@gmail.com</li>
-      <li>Linkedin: <a href="www.linkedin.com/in/haseeb-hassan17">See Profile </a></li>
+      <li>Linkedin: <a href="https://www.linkedin.com/in/haseeb-hassan17">See Profile </a></li>
     </ul>
   </section>
 
