--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           
           I learned a lot from this project, including how to clean and process data in Excel, how to create effective visualizations, and how to work collaboratively with others. I'm grateful for the opportunity to have worked on this project, and I'm excited to apply what I learned to future projects.</p>
         <img src="./image/pizza sales.png" width="500" height="250" alt="Project image">
+        <li>See the Project: <a href="https://www.linkedin.com/posts/haseeb-hassan17_exceldashboard-dataanalytics-pizzasales-activity-7108305106642612224-vzxU?utm_source=share&utm_medium=member_desktop">See the Project </a></li>
       </li>
     </ul>
   </section>
