--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
             
             The dashboard is well-organized and easy to read. The visualizations are clear and concise. The dashboard is a valuable tool for the retail store to track its sales performance and identify trends.</p>
         <img src="./image/Screenshot 2023-08-10 095421.png" width="500" height="250" alt="Project image">
+        <li><a href="https://www.linkedin.com/posts/haseeb-hassan17_excited-to-share-my-store-analysis-and-activity-7090512515649929216-L2hy?utm_source=share&utm_medium=member_desktop">See the Project </a></li>
       </li>
       <li>
         <h4>Past Three Years Bike Analysis For the Three Top States For Australia</h4>
