--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <li><a href="https://www.linkedin.com/posts/haseeb-hassan17_excited-to-share-my-store-analysis-and-activity-7090512515649929216-L2hy?utm_source=share&utm_medium=member_desktop">See the Project </a></li>
       </li>
       <li>
-        <h4>Past Three Years Bike Analysis For the Three Top States For Australia</h4>
+        <h4>Past Three Years Bike Analysis For the Top Three States For Australia</h4>
         <p>This Power BI dashboard provides a comprehensive overview of bike purchases in Australia over the past three years. The dashboard includes a variety of visualizations, including charts, maps, and tables, to help you identify trends and patterns in bike purchase data.</p>
         <p><b>Conclusion:</b>
 
